# APH-IF

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE-CODE  LICENSE-DOCS  Makefile  QUICK_START.md  README.md  docker-compose.yml  monitor_api_calls.py  pyproject.toml  requirements.txt  run_microservices.py  set_environment.py  test_docker_setup.py
backend/: .env.example  Dockerfile  Dockerfile.backend  README.md  __init__.py  circuit_breaker.py  config.py  console_fusion_demo.py  console_semantic_demo.py  console_test_neo4j_connection.py  console_traversal_demo.py  context_fusion.py  llm.py  main.py  parallel_hybrid.py  pyproject.toml  schema_cli.py
common/: README.md  __init__.py  api_monitor.py  config.py  logging.py  models.py  monitored_neo4j.py  (+3 more)
data_processing/: .env.example  Dockerfile  README.md  __init__.py  cfr_downloader.py  check_processed_documents.py  chunker.py  config.py  docling_adapter.py  embeddings.py  kill_stuck_process.py  neo4j_writer.py  page_num_adjust.py  pyproject.toml  run_data_processing_with_monitoring.py  run_ingest.py  run_with_timeout_protection.py  set_environment.py  update_chunk_page_properties.py
data_processing/app/: main.py
data_processing/entities/: __init__.py  augment.py  evaluator.py  extract.py  normalizer.py  pipeline.py  rules.py
data_processing/entities/evaluation/: labeled_samples.jsonl  test_patterns.py
data_processing/entities/lexicons/: legal_terms.json
data_processing/entities/patterns/: legal_patterns.jsonl
data_processing/processing/: add_relationships_to_graph.py  compute_doc_embeddings.py  initial_graph_build.py  launch_data_processing.py  main.py  run_initial_graph_build.py  run_relationship_augmentation.py
data_processing/processing/data_pdf_test/: Credits.docx
data_processing/tests/: __init__.py  test_complete_graph_pipeline.py  test_healthz.py
data_processing/utils/: logging.py
(+90 files in other folders)
